CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (DxCanvas)

IF(CMAKE_EXE_LINKER_FLAGS EQUAL " /machine:x64 ")
	SET (ARCH "64")
ELSE()
	SET (ARCH "86")
ENDIF()

SET (CMAKE_C++_CREATE_STATIC_LIBRARY 1)
SET (DXCANVAS_SOURCE_DIR "${PROJECT_SOURCE_DIR}/source")
SET (DXCANVAS_PCH_SUBDIR ${DXCANVAS_SOURCE_DIR}/PCH)
SET (DXCANVAS_PCH_NAME "dxstdafx")
SET (DXCANVAS_PCH_HEADER ${DXCANVAS_PCH_NAME}.h)
SET (DXCANVAS_PCH_CPP ${DXCANVAS_PCH_NAME}.cpp)
SET (DXCANVAS_PCH_BIN ${DXCANVAS_PCH_NAME}.pch)

SET(DXCANVAS_SOURCE_SUBDIRS
"Camera"
"Canvas"
"DirectX"
"Graphics"
"Light"
"Model"
"PCH"
"Shaders"
"Text"
"Texture"
"TextureManager"
)

SET(DXCANVAS_SOURCE_FILES "")
FOREACH(subdir ${DXCANVAS_SOURCE_SUBDIRS})
	FILE(GLOB TEMP ${DXCANVAS_SOURCE_DIR}/${subdir}/*.cpp ${DXCANVAS_SOURCE_DIR}/${subdir}/*.h)
	SET(DXCANVAS_SOURCE_FILES ${DXCANVAS_SOURCE_FILES} ${TEMP})
ENDFOREACH()

# Add precomiled header configuration
SET_SOURCE_FILES_PROPERTIES(${DXCANVAS_SOURCE_FILES}
                            PROPERTIES COMPILE_FLAGS "/Yu\"${DXCANVAS_PCH_HEADER}\" /FI\"${DXCANVAS_PCH_HEADER}\" /Fp\"${DXCANVAS_PCH_NAME}\""
                            OBJECT_DEPENDS "${DXCANVAS_PCH_NAME}")
SET_SOURCE_FILES_PROPERTIES(${DXCANVAS_PCH_SUBDIR}/${DXCANVAS_PCH_CPP}
                            PROPERTIES COMPILE_FLAGS "/Yc\"${DXCANVAS_PCH_HEADER}\" /Fp\"${DXCANVAS_PCH_NAME}\""
                            OBJECT_OUTPUTS "${DXCANVAS_PCH_NAME}")

ADD_LIBRARY (DxCanvas
${DXCANVAS_SOURCE_FILES}
)
FOREACH(subdir ${DXCANVAS_SOURCE_SUBDIRS})
    SOURCE_GROUP(${subdir} FILES ${DXCANVAS_SOURCE_DIR}/${subdir}/*.cpp ${DXCANVAS_SOURCE_DIR}/${subdir}/*.h)
	MESSAGE(${DXCANVAS_SOURCE_DIR}/${subdir}/)
ENDFOREACH()

INCLUDE_DIRECTORIES( ${DXCANVAS_SOURCE_DIR} )
INCLUDE_DIRECTORIES( ${DXCANVAS_PCH_SUBDIR} )
INCLUDE_DIRECTORIES( "$ENV{DXSDK_DIR}Include" )

LINK_DIRECTORIES( $ENV{DXSDK_DIR}x${ARCH} )
TARGET_LINK_LIBRARIES(DxCanvas
"d3dx10.lib"
"d3dx11.lib"
"d3d11.lib"
"dsound.lib"
"dxguid.lib"
"dxgi.lib"
"winmm.lib"
)
	
#SET_TARGET_PROPERTIES(DXCANVAS PROPERTIES LINKER_LANGUAGE C++)