CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
IF(NOT DEFINED PROJECT_NAME)
	SET(PROJECT_NAME "DxCanvas")
	PROJECT(${PROJECT_NAME})
ENDIF()

LIST( APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMake" )
INCLUDE( msvc_support )

#SET (CMAKE_C++_CREATE_STATIC_LIBRARY 1)

IF(NOT DEFINED DX_ROOT_DIR)
	SET(DX_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
ENDIF()

SET (DX_SOURCE_DIR "${DX_ROOT_DIR}/source")
SET (DX_PCH_SUBDIR ${DX_SOURCE_DIR}/PCH)
SET (DX_PCH_NAME "dxstdafx")
SET (DX_PCH_HEADER ${DX_PCH_NAME}.h)
SET (DX_PCH_CPP ${DX_PCH_NAME}.cpp)
SET (DX_PCH_BIN ${DX_PCH_NAME}.pch)

SET(DX_SOURCE_SUBDIRS
"Camera"
"Canvas"
"DirectX"
"Graphics"
"Light"
"Model"
"PCH"
"Shaders"
"Shaders/VertexShader"
"Shaders/Shader"
"Shaders/PixelShader"
"Text"
"Texture"
"TextureManager"
)

SET(DX_SOURCE_FILES "")
FOREACH(subdir ${DX_SOURCE_SUBDIRS})
	FILE(GLOB TEMP ${DX_SOURCE_DIR}/${subdir}/*.cpp ${DX_SOURCE_DIR}/${subdir}/*.h)
	SET(DX_SOURCE_FILES ${DX_SOURCE_FILES} ${TEMP})
ENDFOREACH()

ADD_LIBRARY (DxCanvas
${DX_SOURCE_FILES}
)
FOREACH(subdir ${DX_SOURCE_SUBDIRS})
	STRING(REPLACE "/" "\\" tempSubdir ${subdir})
	FILE(GLOB subdir_files ${DX_SOURCE_DIR}/${subdir}/*.cpp ${DX_SOURCE_DIR}/${subdir}/*.h)
    SOURCE_GROUP(${tempSubdir} FILES ${subdir_files})
ENDFOREACH()

INCLUDE_DIRECTORIES( ${DX_SOURCE_DIR} )
INCLUDE_DIRECTORIES( ${DX_PCH_SUBDIR} )
INCLUDE_DIRECTORIES( "$ENV{DXSDK_DIR}Include" )

MSVC_SET_PCH(DxCanvas
${DX_PCH_SUBDIR}/${DX_PCH_HEADER}
${DX_PCH_SUBDIR}/${DX_PCH_CPP}
)

#SET_TARGET_PROPERTIES(InputManager PROPERTIES LINKER_LANGUAGE C++)